// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`top-nav/presenters/HelpButtonPresenter  1`] = `
<button
  className="hig__icon-button hig__icon-button--transparent"
  onBlur={undefined}
  onClick={undefined}
  onFocus={undefined}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  title="View help"
>
  <svg
    className="hig__icon-button__icon"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      help-24
    </title>
    <g
      fill="#2e4258"
    >
      <path
        d="M12 22a10 10 0 1 1 10-10 10 10 0 0 1-10 10zm0-19a9 9 0 1 0 9 9 9 9 0 0 0-9-9z"
      />
      <path
        d="M12.35 6.33A3.15 3.15 0 0 0 9 9.23v.24l1.49.32v-.25c.23-1.19.83-1.77 1.83-1.77a1.78 1.78 0 0 1 1.15.38 1.2 1.2 0 0 1 .46 1 1.46 1.46 0 0 1-.48 1.08 6.25 6.25 0 0 1-.8.51 3.93 3.93 0 0 0-.77.5 1.57 1.57 0 0 0-.32.48 1.81 1.81 0 0 0-.17.6c0 .19-.08 1.44-.08 2.15v.25h1.5v-1.83a.93.93 0 0 1 .12-.55 2.75 2.75 0 0 1 .83-.55 2.92 2.92 0 0 0 1.85-2.61 2.65 2.65 0 0 0-.91-2.06 3.38 3.38 0 0 0-2.35-.79z"
      />
      <rect
        height="2.1"
        rx=".79"
        ry=".79"
        width="2.1"
        x="10.95"
        y="16"
      />
    </g>
  </svg>
</button>
`;

exports[`top-nav/presenters/HelpButtonPresenter  2`] = `
<button
  className="hig__icon-button hig__icon-button--transparent"
  onBlur={undefined}
  onClick={undefined}
  onFocus={undefined}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  title="View help"
>
  <svg
    className="hig__icon-button__icon"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      help-24
    </title>
    <g
      fill="#2e4258"
    >
      <path
        d="M12 22a10 10 0 1 1 10-10 10 10 0 0 1-10 10zm0-19a9 9 0 1 0 9 9 9 9 0 0 0-9-9z"
      />
      <path
        d="M12.35 6.33A3.15 3.15 0 0 0 9 9.23v.24l1.49.32v-.25c.23-1.19.83-1.77 1.83-1.77a1.78 1.78 0 0 1 1.15.38 1.2 1.2 0 0 1 .46 1 1.46 1.46 0 0 1-.48 1.08 6.25 6.25 0 0 1-.8.51 3.93 3.93 0 0 0-.77.5 1.57 1.57 0 0 0-.32.48 1.81 1.81 0 0 0-.17.6c0 .19-.08 1.44-.08 2.15v.25h1.5v-1.83a.93.93 0 0 1 .12-.55 2.75 2.75 0 0 1 .83-.55 2.92 2.92 0 0 0 1.85-2.61 2.65 2.65 0 0 0-.91-2.06 3.38 3.38 0 0 0-2.35-.79z"
      />
      <rect
        height="2.1"
        rx=".79"
        ry=".79"
        width="2.1"
        x="10.95"
        y="16"
      />
    </g>
  </svg>
</button>
`;

exports[`top-nav/presenters/HelpButtonPresenter  3`] = `
<button
  className="hig__icon-button hig__icon-button--transparent"
  onBlur={undefined}
  onClick={[Function]}
  onFocus={undefined}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  title="View help"
>
  <svg
    className="hig__icon-button__icon"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      help-24
    </title>
    <g
      fill="#2e4258"
    >
      <path
        d="M12 22a10 10 0 1 1 10-10 10 10 0 0 1-10 10zm0-19a9 9 0 1 0 9 9 9 9 0 0 0-9-9z"
      />
      <path
        d="M12.35 6.33A3.15 3.15 0 0 0 9 9.23v.24l1.49.32v-.25c.23-1.19.83-1.77 1.83-1.77a1.78 1.78 0 0 1 1.15.38 1.2 1.2 0 0 1 .46 1 1.46 1.46 0 0 1-.48 1.08 6.25 6.25 0 0 1-.8.51 3.93 3.93 0 0 0-.77.5 1.57 1.57 0 0 0-.32.48 1.81 1.81 0 0 0-.17.6c0 .19-.08 1.44-.08 2.15v.25h1.5v-1.83a.93.93 0 0 1 .12-.55 2.75 2.75 0 0 1 .83-.55 2.92 2.92 0 0 0 1.85-2.61 2.65 2.65 0 0 0-.91-2.06 3.38 3.38 0 0 0-2.35-.79z"
      />
      <rect
        height="2.1"
        rx=".79"
        ry=".79"
        width="2.1"
        x="10.95"
        y="16"
      />
    </g>
  </svg>
</button>
`;
